<resources>
    <string name="app_name">movies idk</string>
    <string name="error_text"><![CDATA[ERROR :<]]></string>
    <string name="active">active</string>
    <string name="inactive">inactive</string>
    <string name="tags">Tags</string>
    <string name="team_members">Team members</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="home_fragment_label">Home Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_credentials">Please enter your credentials</string>
    <string name="stars">Stars</string>
    <string name="top_movies">Top Rated Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="airing_today">Airing Today</string>
    <string name="must_watch">Must Watch</string>
    <string name="search">Search</string>
    <string name="pokemons">Pokemons</string>
    <string name="search_history_10">search_history_10</string>
    <string name="cast">Cast</string>
    <string name="overview">Overview</string>
    <string name="in_progress">In progress</string>
    <string name="session_id">session_id</string>
</resources>