<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="homeViewModel"
            type="com.example.cryptoapp.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.HomeFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivUserPhoto"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logo" />

            <ImageView
                android:id="@+id/ivSearchIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_default"
                android:src="@drawable/ic_search" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:id="@+id/svScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_doodle_extended_bitmap"
            android:paddingBottom="60dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vpGallery"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.zhpan.indicator.IndicatorView
                    android:id="@+id/ivGalleryIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_default"
                    app:layout_constraintBottom_toBottomOf="@id/vpGallery"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:vpi_slider_checked_color="@color/secondaryColor"
                    app:vpi_slider_radius="5dp" />

                <TextView
                    android:id="@+id/tvStars"
                    style="@style/HomeCategoryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stars"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vpGallery"
                    tools:text="actori stelutze" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvStars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvStars" />

                <TextView
                    android:id="@+id/tvTopMovies"
                    style="@style/HomeCategoryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_movies"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvStars"
                    tools:text="top movies" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTopMovies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTopMovies" />

                <TextView
                    android:id="@+id/tvPopularMovies"
                    style="@style/HomeCategoryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular_movies"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvTopMovies"
                    tools:text="filme populare no" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPopularMovies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPopularMovies" />

                <TextView
                    android:id="@+id/tvAiring"
                    style="@style/HomeCategoryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airing_today"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvPopularMovies"
                    tools:text="filme care zboara azi" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAiring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAiring" />

                <TextView
                    android:id="@+id/tvPokemons"
                    style="@style/HomeCategoryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pokemons"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvAiring"
                    tools:text="pokemoni" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPokemons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPokemons" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>